--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        //Task 1
+        var user_name;
+        user_name = prompt("Please enter your name:");
+        var name="Mr. "+user_name;
+        console.log(name);
+        
+        //Task 2
+    </script>
 </body>
 </html>
