--- a/Task1.html
+++ b/Task1.html
@@ -8,12 +8,17 @@
 <body>
     <script>
         //Task 1
-        var user_name;
-        user_name = prompt("Please enter your name:");
-        var name="Mr. "+user_name;
-        console.log(name);
+        // var user_name;
+        // user_name = prompt("Please enter your name:");
+        // var name="Mr. "+user_name;
+        // console.log(name);
         
         //Task 2
+        var input;
+        input = prompt("Type anything: ");
+        input.toString();
+        alert(input.length);
+        
     </script>
 </body>
 </html>
