--- a/Task1.html
+++ b/Task1.html
@@ -14,11 +14,17 @@
         // console.log(name);
         
         //Task 2
+        // var input;
+        // input = prompt("Type anything: ");
+        // input.toString();
+        // alert(input.length);
+
+        //Task 3
         var input;
         input = prompt("Type anything: ");
-        input.toString();
-        alert(input.length);
-        
+        var output = input.trim();
+        alert(output);
+
     </script>
 </body>
 </html>
