--- a/Task1.html
+++ b/Task1.html
@@ -20,10 +20,14 @@
         // alert(input.length);
 
         //Task 3
-        var input;
-        input = prompt("Type anything: ");
-        var output = input.trim();
-        alert(output);
+        // var input;
+        // input = prompt("Type anything: ");
+        // var output = input.trim();
+        // alert(output);
+
+        //Task 4
+        //var 1_#name;
+        //var #name;
 
     </script>
 </body>
