--- a/Task1.html
+++ b/Task1.html
@@ -29,6 +29,9 @@
         //var 1_#name;
         //var #name;
 
+        //Task 5
+        var calc = 2+6*8-9+(2/3)+9;
+        alert(Math.floor(calc));
     </script>
 </body>
 </html>
