--- a/Task1.html
+++ b/Task1.html
@@ -30,8 +30,12 @@
         //var #name;
 
         //Task 5
-        var calc = 2+6*8-9+(2/3)+9;
-        alert(Math.floor(calc));
+        // var calc = 2+6*8-9+(2/3)+9;
+        // alert(Math.floor(calc));
+
+        //Task 6
+        alert(45);
+        
     </script>
 </body>
 </html>
