--- a/Task1.html
+++ b/Task1.html
@@ -34,8 +34,14 @@
         // alert(Math.floor(calc));
 
         //Task 6
-        alert(45);
+        //alert(45);
         
+        //Task 7
+        var phoneNumber = 03205757562 
+        var NIC = "4250187968352"
+        var name = "umair"
+        alert("Hello Mr. "+name);
+
     </script>
 </body>
 </html>
