--- a/Task1.html
+++ b/Task1.html
@@ -37,10 +37,14 @@
         //alert(45);
         
         //Task 7
-        var phoneNumber = 03205757562 
-        var NIC = "4250187968352"
-        var name = "umair"
-        alert("Hello Mr. "+name);
+        // var phoneNumber = 03205757562 
+        // var NIC = "4250187968352"
+        // var name = "umair"
+        // alert("Hello Mr. "+name);
+
+        //Task 8
+        var age = 21
+        if (age >= 20) {console.log("Eligible")}
 
     </script>
 </body>
