--- a/Task1.html
+++ b/Task1.html
@@ -43,8 +43,24 @@
         // alert("Hello Mr. "+name);
 
         //Task 8
-        var age = 21
-        if (age >= 20) {console.log("Eligible")}
+        // var age = 21
+        // if (age >= 20) {console.log("Eligible")}
+
+        //Task 9
+        var product1 = 500 * 3;
+        var product2 = 600;
+        var discount = 20;
+        var total = (product1 + product2) / discount
+        var budget = 100
+
+        if (total < budget) {
+            console.log("You did not exceed the budget")
+        } else {
+            console.log("You are not allowed to spend this much money")
+        }
+        console.log("The condition \"You are not allowed to spend this much money\" is triggered")
+
+        
 
     </script>
 </body>
