--- a/Task1.html
+++ b/Task1.html
@@ -47,20 +47,33 @@
         // if (age >= 20) {console.log("Eligible")}
 
         //Task 9
-        var product1 = 500 * 3;
-        var product2 = 600;
-        var discount = 20;
-        var total = (product1 + product2) / discount
-        var budget = 100
+        // var product1 = 500 * 3;
+        // var product2 = 600;
+        // var discount = 20;
+        // var total = (product1 + product2) / discount
+        // var budget = 100
 
-        if (total < budget) {
-            console.log("You did not exceed the budget")
-        } else {
-            console.log("You are not allowed to spend this much money")
+        // if (total < budget) {
+        //     console.log("You did not exceed the budget")
+        // } else {
+        //     console.log("You are not allowed to spend this much money")
+        // }
+        // console.log("The condition \"You are not allowed to spend this much money\" is triggered")
+
+        //Task 10
+        var SAT = 200;
+        var avg = 150;
+        var GPA = 3;
+        var sport = "snooker"
+
+        if (SAT > avg || GPA > 2.5 || sport === "football") {
+            console.log("You're an awesome student");
         }
-        console.log("The condition \"You are not allowed to spend this much money\" is triggered")
+        else {
+            console.log("You are not eligible");
+        }
+        console.log("The condition \"You're an awesome student\" is triggered");
 
-        
 
     </script>
 </body>
