--- a/Task2.html
+++ b/Task2.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+        //Task 1
+        console.log(Math.floor(Math.random()*10));
+
         
     </script>
 </body>
