--- a/Task2.html
+++ b/Task2.html
@@ -8,8 +8,19 @@
 <body>
     <script>
         //Task 1
-        console.log(Math.floor(Math.random()*10));
+        //console.log(Math.floor(Math.random()*10));
 
+        //Task 2
+        var arr1=[12,34,56,1];
+        var arr2=[-12,-34,0,-56,-1];
+        var val=arr1[0];
+        var low=arr1[0];
+        for(i = 0; i < arr1.length; i++ ){
+            if (arr1[i]<val){
+                low=arr1[i];
+            }
+        }
+        console.log(low);
         
     </script>
 </body>
