--- a/Task2.html
+++ b/Task2.html
@@ -11,17 +11,31 @@
         //console.log(Math.floor(Math.random()*10));
 
         //Task 2
-        var arr1=[12,34,56,1];
-        var arr2=[-12,-34,0,-56,-1];
-        var val=arr1[0];
-        var low=arr1[0];
-        for(i = 0; i < arr1.length; i++ ){
-            if (arr1[i]<val){
-                low=arr1[i];
-            }
-        }
-        console.log(low);
-        
+        // var arr1=[12,34,56,1];
+        // var arr2=[-12,-34,0,-56,-1];
+        // var val=arr1[0];
+        // var low=arr1[0];
+        // for(i = 0; i < arr1.length; i++ ){
+        //     if (arr1[i]<val){
+        //         low=arr1[i];
+        //     }
+        // }
+        // console.log(low);
+
+        //Task 3
+        //Test data: 12, "abcd", "12", '12', " ", 1.20, -200
+        //To find type of the value use this line
+        //console.log(typeof(-200));
+
+        //To find if the value can be used as a number or not use this code
+        // if("12"/2){
+        //     console.log("numeric");
+        // } else {
+        //     console.log("not a numeric value")
+        // }
+
+        //Task 4
+
     </script>
 </body>
 </html>
