--- a/Task2.html
+++ b/Task2.html
@@ -35,7 +35,12 @@
         // }
 
         //Task 4
-
+        var arr1=[1,2,3,10,20,85];
+        var sum=0;
+        for(i=0;i<arr1.length;i++){
+            sum=sum+arr1[i];
+        }
+        console.log(sum);
     </script>
 </body>
 </html>
