--- a/Task2.html
+++ b/Task2.html
@@ -35,12 +35,22 @@
         // }
 
         //Task 4
-        var arr1=[1,2,3,10,20,85];
-        var sum=0;
-        for(i=0;i<arr1.length;i++){
-            sum=sum+arr1[i];
-        }
-        console.log(sum);
+        // var arr1=[1,2,3,10,20,85];
+        // var sum=0;
+        // for(i=0;i<arr1.length;i++){
+        //     sum=sum+arr1[i];
+        // }
+        // console.log(sum);
+
+        //Task 5
+        var num1 = 10;
+        var num2 = -5;
+
+        var result = --num1 + ++num2 + num2++ - num1-- + num1 - num2
+                    //9     + -4     + -4     - 9       + 8    - -3 = +3
+                    //num2=-3
+                    //num1=8
+        console.log(result);
     </script>
 </body>
 </html>
