--- a/Task2.html
+++ b/Task2.html
@@ -43,14 +43,47 @@
         // console.log(sum);
 
         //Task 5
-        var num1 = 10;
-        var num2 = -5;
+        // var num1 = 10;
+        // var num2 = -5;
 
-        var result = --num1 + ++num2 + num2++ - num1-- + num1 - num2
-                    //9     + -4     + -4     - 9       + 8    - -3 = +3
-                    //num2=-3
-                    //num1=8
-        console.log(result);
+        // var result = --num1 + ++num2 + num2++ - num1-- + num1 - num2
+        //             //9     + -4     + -4     - 9       + 8    - -3 = +3
+        //             //num2=-3
+        //             //num1=8
+        // console.log(result);
+
+        //Task 6
+        var str1 = "Osama";
+        var str2 = " ";
+        var str3 = "";
+        
+        //Use if str.length==0 rather than this.
+        // var res1 = str1.split("");
+        // var res2 = str2.split("");
+        // var res3 = str3.split("");
+
+        // console.log(res1);
+        // console.log(res2);
+        // console.log(res3);
+
+        if(str1.length==0){
+            console.log("String1 is empty")
+        } else {
+            console.log("non empty string1")
+        }
+
+        if(str2.length==0){
+            console.log("String2 is empty")
+        } else {
+            console.log("non empty string2")
+        }
+
+        if(str3.length==0){
+            console.log("String3 is empty")
+        } else {
+            console.log("non empty string3")
+        }
+
     </script>
 </body>
 </html>
