--- a/Task2.html
+++ b/Task2.html
@@ -53,37 +53,45 @@
         // console.log(result);
 
         //Task 6
-        var str1 = "Osama";
-        var str2 = " ";
-        var str3 = "";
+        // var str1 = "Osama";
+        // var str2 = " ";
+        // var str3 = "";
         
-        //Use if str.length==0 rather than this.
-        // var res1 = str1.split("");
-        // var res2 = str2.split("");
-        // var res3 = str3.split("");
+        // //Use if str.length==0 rather than this.
+        // // var res1 = str1.split("");
+        // // var res2 = str2.split("");
+        // // var res3 = str3.split("");
 
-        // console.log(res1);
-        // console.log(res2);
-        // console.log(res3);
+        // // console.log(res1);
+        // // console.log(res2);
+        // // console.log(res3);
 
-        if(str1.length==0){
-            console.log("String1 is empty")
-        } else {
-            console.log("non empty string1")
-        }
+        // if(str1.length==0){
+        //     console.log("String1 is empty")
+        // } else {
+        //     console.log("non empty string1")
+        // }
 
-        if(str2.length==0){
-            console.log("String2 is empty")
-        } else {
-            console.log("non empty string2")
-        }
+        // if(str2.length==0){
+        //     console.log("String2 is empty")
+        // } else {
+        //     console.log("non empty string2")
+        // }
 
-        if(str3.length==0){
-            console.log("String3 is empty")
-        } else {
-            console.log("non empty string3")
-        }
+        // if(str3.length==0){
+        //     console.log("String3 is empty")
+        // } else {
+        //     console.log("non empty string3")
+        // }
 
+        //Task 7
+        var test = "js exercises";
+
+        function capitalizeFirstLetter(string) {
+            return string.charAt(0).toUpperCase() + string.charAt(1).toUpperCase() + string.slice(2);
+            }
+
+        console.log(capitalizeFirstLetter(test)); 
     </script>
 </body>
 </html>
