--- a/Task2.html
+++ b/Task2.html
@@ -85,13 +85,28 @@
         // }
 
         //Task 7
-        var test = "js exercises";
+        // var test = "js exercises";
 
-        function capitalizeFirstLetter(string) {
-            return string.charAt(0).toUpperCase() + string.charAt(1).toUpperCase() + string.slice(2);
+        // function capitalizeFirstLetter(string) {
+        //     return string.charAt(0).toUpperCase() + string.charAt(1).toUpperCase() + string.slice(2);
+        //     }
+
+        // console.log(capitalizeFirstLetter(test));
+        
+        //Task 8
+        var test = "this is a test sentence";
+        
+        function capitalizeFirstLetterOfEachWord(string) {
+            var str = string.split(" ");
+            for (i = 0; i < str.length; i++){
+            str[i] = str[i].charAt(0).toUpperCase() + str[i].slice(1);
+        }
+
+            return str.join(' ');
             }
 
-        console.log(capitalizeFirstLetter(test)); 
+        console.log(capitalizeFirstLetterOfEachWord(test));        
+
     </script>
 </body>
 </html>
