--- a/Task3.html
+++ b/Task3.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <script>
-    
+    //Task 1
+    var d = new Date();
+    console.log(d.toDateString());
 </script>
 </body>
 </html>
