--- a/Task3.html
+++ b/Task3.html
@@ -8,8 +8,12 @@
 <body>
 <script>
     //Task 1
+    // var d = new Date();
+    // console.log(d.toDateString());
+
+    //Task 2
     var d = new Date();
-    console.log(d.toDateString());
+    console.log(d);
 </script>
 </body>
 </html>
