--- a/Task3.html
+++ b/Task3.html
@@ -12,8 +12,13 @@
     // console.log(d.toDateString());
 
     //Task 2
-    var d = new Date();
-    console.log(d);
+    // var d = new Date();
+    // console.log(d);
+
+    //Task 3
+    // Tue Jan 10 2006
+    // Today's date but the year is set to 2006.
+
 </script>
 </body>
 </html>
