--- a/Task3.html
+++ b/Task3.html
@@ -16,9 +16,17 @@
     // console.log(d);
 
     //Task 3
+    const date = new Date();
+    console.log("HOUR =======>", date.getHours()); //17
+    console.log("DAY =======>", date.getDay()); // 0 (Sunday)
+    console.log("MONTH =======>", date.getMonth()); // 0 (January)
+    console.log("YEAR =======>", date.getFullYear()); // 2021 
+
+    //Task 4
     // Tue Jan 10 2006
     // Today's date but the year is set to 2006.
 
+    
 </script>
 </body>
 </html>
