--- a/Task3.html
+++ b/Task3.html
@@ -27,11 +27,21 @@
     // Today's date but the year is set to 2006.
 
     //Task 5
-    function addMr(str){
-        console.log("Mr. "+str);
-    }
+    // function addMr(str){
+    //     console.log("Mr. "+str);
+    // }
     
-    addMr("Worldwide");
+    // addMr("Worldwide");
+
+    //Task 6
+    function tellTime() {
+        var now = new Date();
+        var theHr = now.getHours();
+        var theMin = now.getMinutes();
+        console.log("Current time: " + theHr + ":" + theMin)
+    }
+
+    tellTime(); //Current time: 17:29
 </script>
 </body>
 </html>
