--- a/Task3.html
+++ b/Task3.html
@@ -34,14 +34,20 @@
     // addMr("Worldwide");
 
     //Task 6
-    function tellTime() {
-        var now = new Date();
-        var theHr = now.getHours();
-        var theMin = now.getMinutes();
-        console.log("Current time: " + theHr + ":" + theMin)
-    }
+    // function tellTime() {
+    //     var now = new Date();
+    //     var theHr = now.getHours();
+    //     var theMin = now.getMinutes();
+    //     console.log("Current time: " + theHr + ":" + theMin)
+    // }
 
-    tellTime(); //Current time: 17:29
+    // tellTime(); //Current time: 17:29
+
+    //Task 7
+    //3. func myfunction() { } is not a valid way of writing a function
+    //1. myfunction() { } is also not valid
+    
+
 </script>
 </body>
 </html>
