--- a/Task3.html
+++ b/Task3.html
@@ -46,8 +46,15 @@
     //Task 7
     //3. func myfunction() { } is not a valid way of writing a function
     //1. myfunction() { } is also not valid
-    
 
+    //Task 8
+    function deleteLastArrayElement(array){
+        array.pop();
+        return array;
+    }
+    
+    var test = ["hello", "world", "this", "is", "Sam"];
+    console.log(deleteLastArrayElement(test));
 </script>
 </body>
 </html>
