--- a/Task3.html
+++ b/Task3.html
@@ -70,16 +70,25 @@
     // typeChecker(arr);
 
     //Task 10
-    function arrayDoubler(array){
-        for(i = 0; i < array.length; i++){
-            array[i] = array[i] * 2;
-        }
-        return array;
+    // function arrayDoubler(array){
+    //     for(i = 0; i < array.length; i++){
+    //         array[i] = array[i] * 2;
+    //     }
+    //     return array;
+    // }
+
+    // var numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+
+    // console.log(arrayDoubler(numbers));
+
+    //Task 11
+    function generateId(){
+        return Math.floor(Math.random()*1000);
+        
     }
 
-    var numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
-
-    console.log(arrayDoubler(numbers));
+    var id = generateId();
+    console.log(id);
 </script>
 </body>
 </html>
