--- a/Task3.html
+++ b/Task3.html
@@ -82,13 +82,20 @@
     // console.log(arrayDoubler(numbers));
 
     //Task 11
-    function generateId(){
-        return Math.floor(Math.random()*1000);
+    // function generateId(){
+    //     return Math.floor(Math.random()*1000);
         
+    // }
+
+    // var id = generateId();
+    // console.log(id);
+
+    //Task 12
+    function charCounterInString(String){
+        console.log(String.length);
     }
 
-    var id = generateId();
-    console.log(id);
+    charCounterInString("hello world");
 </script>
 </body>
 </html>
