--- a/Task3.html
+++ b/Task3.html
@@ -91,11 +91,18 @@
     // console.log(id);
 
     //Task 12
-    function charCounterInString(String){
-        console.log(String.length);
+    // function charCounterInString(String){
+    //     console.log(String.length);
+    // }
+
+    // charCounterInString("hello world");
+
+    //Task 13
+    stringToUpperCase = (String) => {
+        console.log(String.toUpperCase());
     }
 
-    charCounterInString("hello world");
+    stringToUpperCase("hello world");
 </script>
 </body>
 </html>
