--- a/Task3.html
+++ b/Task3.html
@@ -117,24 +117,39 @@
     //     }
     // }
 
-    var test = [5, 3, 9, 1, 23, 8, 4];
+    // var test = [5, 3, 9, 1, 23, 8, 4];
 
-    // Takes 2 arguments, first is array, second takes 1 for ascending or 0 for descending
-    numArrayAscendingDescending = (Array, Boolean) => {
-        // Ascending order
-        if (Boolean == 1){
-            Array.sort((a,b) => {return a-b;})
-            return Array;
-        } else if (Boolean == 0) {
-            //Descending order
-            Array.sort((a,b) => {return b-a;})
-            return Array;
-        } else {
-            console.log("Please specify 1 for ascending or 0 for descending for the second argument")
+    // // Takes 2 arguments, first is array, second takes 1 for ascending or 0 for descending
+    // numArrayAscendingDescending = (Array, Boolean) => {
+    //     // Ascending order
+    //     if (Boolean == 1){
+    //         Array.sort((a,b) => {return a-b;})
+    //         return Array;
+    //     } else if (Boolean == 0) {
+    //         //Descending order
+    //         Array.sort((a,b) => {return b-a;})
+    //         return Array;
+    //     } else {
+    //         console.log("Please specify 1 for ascending or 0 for descending for the second argument")
+    //     }
+    // }
+
+    // console.log(numArrayAscendingDescending(test,0));
+
+    //Task 15
+    stringOrNumber = (str_num) => {
+        if (typeof(str_num)=="string"){
+            return str_num=str_num+" Welcome";
+        } else if (typeof(str_num)=="number"){
+            return str_num*=str_num;
         }
     }
 
-    console.log(numArrayAscendingDescending(test,0));
+    console.log(stringOrNumber("hello"));
+    console.log(stringOrNumber(5));
+    
+
+
 </script>
 </body>
 </html>
